; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_fib_semantics.c___fib_res_prefsrc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_fib_semantics.c___fib_res_prefsrc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fib_result = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__fib_res_prefsrc(%struct.fib_result* %0) #0 {
  %2 = alloca %struct.fib_result*, align 8
  store %struct.fib_result* %0, %struct.fib_result** %2, align 8
  %3 = load %struct.fib_result*, %struct.fib_result** %2, align 8
  %4 = getelementptr inbounds %struct.fib_result, %struct.fib_result* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @FIB_RES_DEV(i32 %5)
  %7 = load %struct.fib_result*, %struct.fib_result** %2, align 8
  %8 = getelementptr inbounds %struct.fib_result, %struct.fib_result* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @FIB_RES_GW(i32 %9)
  %11 = load %struct.fib_result*, %struct.fib_result** %2, align 8
  %12 = getelementptr inbounds %struct.fib_result, %struct.fib_result* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @inet_select_addr(i32 %6, i32 %10, i32 %13)
  ret i32 %14
}

declare dso_local i32 @inet_select_addr(i32, i32, i32) #1

declare dso_local i32 @FIB_RES_DEV(i32) #1

declare dso_local i32 @FIB_RES_GW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
